Resolves: tdf#127859 fix header/footer dialog crash

Change-Id: I643afbac841bbd1bc7857e25d8e1d98b4d48e881
Reviewed-on: https://gerrit.libreoffice.org/79842
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>