sc/source/ui/pagedlg/tphf.cxx
@@ -142,15 +142,6 @@ IMPL_LINK_NOARG(ScHFPage, TurnOnHdl, weld::ToggleButton&, void)
 
 IMPL_LINK_NOARG(ScHFPage, BtnHdl, weld::Button&, void)
 {
-    // When the Edit-Dialog is directly called from the Button's Click-Handler,
-    // the GrabFocus from the Edit-Dialog under OS/2 doesn't work.(Bug #41805#).
-    // With the new StarView, this workaround should be again considered!
-
-    Application::PostUserEvent( LINK( this, ScHFPage, HFEditHdl ), nullptr, true );
-}
-
-IMPL_LINK_NOARG(ScHFPage, HFEditHdl, void*, void)
-{
     SfxViewShell*   pViewSh = SfxViewShell::Current();
 
     if ( !pViewSh )
